projects/legacy/components/textarea/textarea.style.less
@import '@taiga-ui/core/styles/taiga-ui-local';
@import '@taiga-ui/legacy/styles/taiga-ui-local';

@height: 6.75rem;
@heightCounter: 7.875rem;

:host {
    position: relative;
    z-index: 0;
    display: flex;
    flex-direction: column;
    min-block-size: var(--tui-textarea-height);
    border-radius: var(--tui-radius-m);
    color: var(--tui-text-primary);

    :host-context(*:disabled) {
        pointer-events: none;
    }

    &[data-size='s'] {
        --tui-height: var(--tui-height-s);
        --tui-textarea-height: 4.5625rem;

        font: var(--tui-font-text-s);
    }

    &[data-size='m'] {
        --tui-height: var(--tui-height-m);
        --tui-textarea-height: 5.5rem;

        font: var(--tui-font-text-s);
    }

    &[data-size='l'] {
        --tui-height: var(--tui-height-l);
        --tui-textarea-height: @height;

        font: var(--tui-font-text-m);
    }

    &[data-size='m']._has-counter {
        --tui-textarea-height: 6.625rem;
    }

    &[data-size='l']._has-counter {
        --tui-textarea-height: @heightCounter;
    }

    // https://bugs.webkit.org/show_bug.cgi?id=278558
    .safari-only({
        .t-pseudo-content, .t-input {
            text-wrap: balance;
        }
    });
}

.t-outline {
    min-block-size: inherit;
}

.t-content {
    display: block;
    margin-top: 0;
    margin-bottom: 0;
    min-block-size: inherit;
    box-sizing: border-box;
    overflow: hidden;
    cursor: text;

    :host._disabled & {
        cursor: auto;
        opacity: var(--tui-disabled-opacity);
    }

    :host:not(._expandable) & {
        position: absolute;
        top: 0;
        left: 0;
        bottom: 1px;
        right: 0;
        min-block-size: auto;
    }

    :host._has-counter:not(._expandable) & {
        bottom: 1.6875rem;
    }

    :host._label-outside._has-counter:not(._expandable) & {
        bottom: 1rem;
    }
}

.t-wrapper {
    position: relative;
    inline-size: 100%;
    block-size: 100%;
    min-block-size: inherit;
    box-sizing: border-box;
    padding: calc((var(--tui-height) - 1.25rem) / 2) 0;

    :host[data-size='l']._label-outside & {
        padding: calc((var(--tui-height) - 1.5rem) / 2) 0;
    }

    :host[data-size='m']:not(._label-outside) & {
        padding: calc((var(--tui-height) - 2.25rem) / 2) 0;
    }

    :host[data-size='l']:not(._label-outside) & {
        padding: calc((var(--tui-height) - 2.625rem) / 2) 0;
    }
}

:host-context(table)[data-size='m']._label-outside .t-wrapper {
    padding-bottom: 0.75rem;
}

:host-context(table)[data-size='l']._label-outside .t-wrapper {
    padding-bottom: 1rem;
}

.t-input-wrapper {
    min-block-size: inherit;
    inline-size: 100%;
    flex: 1;
}

.t-relative {
    position: relative;
    min-block-size: inherit;
}

.t-box {
    display: flex;
    min-block-size: calc(100% - 1rem);
    inline-size: 100%;
    box-sizing: content-box;

    :host:not(._expandable) & {
        block-size: calc(100% - 1rem);
    }

    :host:not(._expandable)._label-outside & {
        block-size: 100%;
    }

    :host._has-counter._expandable & {
        margin-bottom: 1.25rem;
    }

    // For placeholder
    :host[data-size='m']:not(._label-outside) & {
        border-block-start: 1rem solid transparent;
    }

    :host[data-size='l']:not(._label-outside) & {
        border-block-start: 1.25rem solid transparent;
    }
}

.t-pseudo-content {
    white-space: pre-wrap;
    overflow-wrap: break-word;
    word-break: keep-all;
    pointer-events: none;
    color: transparent;
    overflow: hidden;
    border: 0 solid transparent;
    border-inline-start-width: var(--t-border-start, 0);
    border-inline-end-width: var(--t-border-end, 0);

    :host[data-size='s'] &,
    :host[data-size='m'] & {
        padding: 0 0.75rem;
    }

    :host[data-size='l'] & {
        padding: 0 1rem;
    }

    &__extra {
        background-color: var(--tui-status-negative-pale);
    }
}

.t-input {
    .clearinput();

    position: absolute;
    top: 0;
    left: 0;
    inline-size: 100%;
    block-size: 100%;
    box-sizing: border-box;
    resize: none;
    overflow: hidden;
    outline: none;
    border-style: solid;
    border-color: transparent;
    border-inline-start-width: var(--t-border-start, 0);
    border-inline-end-width: var(--t-border-end, 0);

    &:not(:last-of-type) {
        display: none;
    }

    &::placeholder {
        color: var(--tui-text-tertiary);
        opacity: 0;
    }

    :host._focused &:not(:read-only)::placeholder {
        opacity: 1;
    }

    :host[data-size='s'] &,
    :host[data-size='m'] & {
        padding: 0 0.75rem;
        font: var(--tui-font-text-s);
    }

    :host[data-size='l'] & {
        padding: 0 1rem;
        font: var(--tui-font-text-m);
    }

    /* Safari 9+, < 13.1 */
    @supports (-webkit-marquee-repetition: infinite) and (object-fit: fill) {
        :host._ios & {
            padding-left: 0.8125rem; // compensation of unkillable padding in mobile safari
        }
    }
}

.t-placeholder {
    .textfield-label();

    position: absolute;
    top: calc(var(--tui-height) / 2 - 0.625rem);
    left: 0;
    max-inline-size: 100%;
    border: 0 solid transparent;
    border-inline-start-width: var(--t-border-start, 0);
    border-inline-end-width: var(--t-border-end, 0);
    box-sizing: border-box;

    :host[data-size='s'] & {
        padding: 0 0.75rem;
    }

    :host[data-size='m'] & {
        padding: 0 0.75rem;
    }

    :host[data-size='l'] & {
        padding: 0 1rem;
    }

    :host._label-outside & {
        overflow: initial;
        block-size: auto;
        white-space: initial;
    }
}

.t-icons {
    .fullsize(absolute, inset);

    display: flex;
    justify-content: flex-end;
    pointer-events: none;
    padding: calc((var(--tui-height) - 1.5rem) / 2) 1rem;

    :host[data-size='m'] & {
        padding: calc((var(--tui-height) - 1.5rem) / 2) 0.625rem;
    }

    & > :not(:first-child) {
        margin-inline-start: 0.25rem;
    }
}

.t-icon {
    .input-icon();

    &_left {
        margin-inline-end: auto;
    }
}

.t-cleaner {
    .icon-button();

    pointer-events: auto;
    border-width: 0.25rem;
}

.t-caret {
    display: inline-block;
    block-size: 1rem;
    inline-size: 0;
}

.t-counter {
    position: absolute;
    right: 0.75rem;
    bottom: 0.5rem;
    font: var(--tui-font-text-s);
    pointer-events: none;
    margin-top: auto;
    text-align: end;
    color: var(--tui-text-tertiary);
}

:host._readonly .t-textfield-icon ::ng-deep [tuiAppearance][data-appearance='icon'] {
    pointer-events: none;
}

@media @tui-mouse {
    :host:not(._readonly):not(._disabled):hover
        .t-textfield-icon
        ::ng-deep
        [tuiAppearance][data-appearance='icon']::after {
        color: var(--tui-text-secondary);
    }
}

